Solving Angus Lee Young issue for white space on game header

--- a/frontend/src/routes/ScoreHeader/index.css
+++ b/frontend/src/routes/ScoreHeader/index.css
@@ -20,7 +20,6 @@
   display: flex;
   flex-direction: row;
   overflow-y: auto;
-  /* padding: 15px; */
   width: 100%;
 }
 
@@ -32,7 +31,8 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 10px;
+  padding-bottom: 3px !important;
   color: #333333;
   min-width: 200px;
   /* Borders inbetween */
